--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -148,7 +148,7 @@
 >
   <ng-template pTemplate="content">
     <div class="p-field">
-      <label for="name">Name</label>
+      <label for="name">E-mail</label>
       <input
         type="text"
         pInputText
@@ -157,17 +157,35 @@
         required
         autofocus
       />
+      <label for="Senha">Senha</label>
+      <input
+        type="text"
+        pInputText
+        id="senha"
+        [(ngModel)]="person.senha"
+        required
+        autofocus
+      />
+      
       <small class="p-invalid" *ngIf="submitted && !person.name"
         >Name is required.</small
       >
     </div>
     <div class="p-formgrid p-grid">
       <div class="p-field p-col">
-        <label for="price">Price</label>
+        <label for="price">Data de nascimento</label>
         <p-calendar [(ngModel)]="person.born"></p-calendar>
       </div>
       <div class="p-field p-col">
-        <label for="quantity">Quantity</label>
+        <label for="quantity">CEP</label>
+        <input
+        type="text"
+        pInputText
+        id="cep"
+        [(ngModel)]="person.cep"
+        required
+        autofocus
+      />
       </div>
     </div>
     <div class="p-field">
